<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image"
        android:layout_height="@dimen/sphynx_size"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/sphynx"
        app:layout_constraintBottom_toTopOf="@+id/login_input"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/password_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/primary_color_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/sign_in_google_button" />


    <Button
        android:id="@+id/sign_in_google_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:background="@drawable/stroke_button"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/sign_up_layout" />


    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/double_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/sign_up_question"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle_text"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/subtitle_text"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>