<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/sphynx"
        app:layout_constraintBottom_toTopOf="@+id/login_input"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/password_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/password_confirmation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirmation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:hint="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirmation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:background="@drawable/primary_color_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>